--- a/resume_proj/resume_app/templates/experience.html
+++ b/resume_proj/resume_app/templates/experience.html
@@ -30,7 +30,7 @@
                 counter++;
                 if(counter<=2)
                 var newElement = '<div class="exp_form"><div class="mb-3"><label for="title" class="form-label">Title</label><input type="text" class="form-control" id="exp_title" name="title"></div><div class="mb-3"><label for="desc" class="desc-form-label">Description</label><textarea class="form-control" id="exp_desc" rows="3" name="desc"></textarea></div></div>'
-                $('#experience').append( $(newElement) )
+                $('.exp_form').append( $(newElement) )
             })            
         })
     </script>
@@ -67,11 +67,15 @@
                 <label for="desc" class="desc-form-label">Description</label>
                 <textarea class="form-control" id="exp_desc" rows="3" name="desc"></textarea>
             </div>
-        </div>       
+        </div>    
+        <div class="d-grid gap-2 col-2 mx-auto" id="btm_btn">
+            </div>
+        <input type="button" id="add_new" value="Add Experience">
+        <div class="d-grid gap-2 col-2 mx-auto" id="btm_btn">
+            <button class="btn btn-primary" id="submit" type="submit">Next page - Employment</button>
+        </div>  
         </form>
     </div>
-    <input type="button" id="add_new" value="Add Experience">
-    <div class="d-grid gap-2 col-2 mx-auto" id="btm_btn">
-        <button class="btn btn-primary" id="submit" type="submit">Next page - Employment</button>
-    </div>
+    
+    
 </body>
