--- a/resume_proj/resume_app/templates/editexperience.html
+++ b/resume_proj/resume_app/templates/editexperience.html
@@ -29,8 +29,8 @@
             $('#add_new').click(function(){
                 counter++;
                 if(counter<=2)
-                var newElement = '<div class="exp_form"><div class="mb-3"><label for="title" class="form-label">Title</label><input type="text" class="form-control" id="exp_title" name="title"></div><div class="mb-3"><label for="desc" class="desc-form-label">Description</label><textarea class="form-control" id="exp_desc" rows="3" name="desc"></textarea></div></div>'
-                $('#experience').append( $(newElement) )
+                var newElement = '<div class="mb-3"><label for="title" class="form-label">Title</label><input type="text" class="form-control" id="exp_title" name="title"></div><div class="mb-3"><label for="desc" class="desc-form-label">Description</label><textarea class="form-control" id="exp_desc" rows="3" name="desc"></textarea></div>'
+                $('.exp_form').append( $(newElement) )
             })            
         })
     </script>
@@ -62,18 +62,19 @@
         <div class="exp_form">
             <div class="mb-3">
                 <label for="title" class="form-label">Title</label>
-                <input type="text" class="form-control" id="exp_title" value="{{experience.title}}" name="title">
+                <input type="text" class="form-control" id="exp_title" value="{{user.experience.title}}" name="title">
             </div>
             <div class="mb-3">
                 <label for="desc" class="desc-form-label">Description</label>
-                <textarea class="form-control" id="exp_desc" rows="3" name="desc">{{experience.desc}}</textarea>
+                <textarea class="form-control" id="exp_desc" rows="3" name="desc">{{user.experience.desc}}</textarea>
             </div>
         </div>
-            {% endfor %}     
+            {% endfor %}   
+            <input type="button" id="add_new" value="Add Experience">
+            <div class="d-grid gap-2 col-2 mx-auto" id="btm_btn">
+                <button class="btn btn-primary" id="submit" type="submit">Back Home</button>
+            </div>  
         </form>
     </div>
-    <input type="button" id="add_new" value="Add Experience">
-    <div class="d-grid gap-2 col-2 mx-auto" id="btm_btn">
-        <button class="btn btn-primary" id="submit" type="submit">Back Home</button>
-    </div>
+    
 </body>
