--- a/resume_proj/resume_app/templates/employment.html
+++ b/resume_proj/resume_app/templates/employment.html
@@ -29,8 +29,8 @@
             $('#add_new').click(function(){
                 counter++;
                 if(counter<=2)
-                var newElement = '<div class="emp_form"><div class="row"><div class="col"><label for="date_from" class="form-label">From</label><input type="date" class="form-control" id="emp_from" name="date_from"></div><div class="col"><label for="date_to" class="form-label">To</label><input type="date" class="form-control" id="emp_to" name="date_to"></div></div><div class="mb-3" id="title_div"><label for="title" class="form-label">Title</label><input type="text" class="form-control" id="emp_title" name="title"></div><div class="mb-3"><label for="desc" class="desc-form-label">Description</label><textarea class="form-control" id="emp_desc" rows="3" name="desc"></textarea></div></div>'
-                $('#employment').append( $(newElement) )
+                var newElement = '<div class="row"><div class="col"><label for="date_from" class="form-label">From</label><input type="date" class="form-control" id="emp_from" name="date_from"></div><div class="col"><label for="date_to" class="form-label">To</label><input type="date" class="form-control" id="emp_to" name="date_to"></div></div><div class="mb-3" id="title_div"><label for="title" class="form-label">Title</label><input type="text" class="form-control" id="emp_title" name="title"></div><div class="mb-3"><label for="desc" class="desc-form-label">Description</label><textarea class="form-control" id="emp_desc" rows="3" name="desc"></textarea></div>'
+                $('.emp_form').append( $(newElement) )
                 if(counter>2)
                 $('#add_new').remove()
             })            
@@ -55,7 +55,7 @@
         </div>
     </nav><!-- /NAVBAR -->
     <br>
-    <h2>Employment</h2>
+    <h2>Employment <span class="emp_notes">(start with most current)</span></h2>
     <br>
     <div id="emp_form">
         <form action="/employment" method="POST" id="employment">
@@ -79,13 +79,14 @@
                 <label for="desc" class="desc-form-label">Description</label>
                 <textarea class="form-control" id="emp_desc" rows="3" name="desc"></textarea>
             </div>
-        </div>       
+        </div>
+        <div class="d-grid gap-2 col-2 mx-auto" id="btm_btn">
+            <input type="button" id="add_new" value="Add Employment">
+        </div>
+        <div class="d-grid gap-2 col-2 mx-auto" id="btm_btn">
+            <button class="btn btn-primary" id="submit" type="submit">Next page - Education</button>
+        </div>     
         </form>
     </div>
-    <input type="button" id="add_new" value="Add Employment">
-    <div id="add_new">
-            <div class="d-grid gap-2 col-2 mx-auto" id="btm_btn">
-                <button class="btn btn-primary" id="submit" type="submit">Next page - Education</button>
-            </div>
     </div>
 </body>
