update views in ed and emp to accept one entry at a time, add table to both pages

--- a/resume_proj/resume_app/static/css/eduaddl.css
+++ b/resume_proj/resume_app/static/css/eduaddl.css
@@ -4,6 +4,16 @@ h2, p{
     text-align: center;
 }
 
+#next_page{
+    color: white;
+}
+
+table{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
 span{
     font-size: small;
 }
