--- a/resume_proj/resume_app/templates/additional.html
+++ b/resume_proj/resume_app/templates/additional.html
@@ -28,10 +28,10 @@
             var counter = 0;
             $('#add_new').click(function(){
                 counter++;
-                if(counter<=5)
-                var newElement = '<div class="addl_form"><div class="mb-3" id="title_div"><label for="info" class="form-label">Additional Info Entry</label><input type="text" class="form-control" id="addl_info" name="info"></div></div>'
-                $('#additional').append( $(newElement) )
-                if(counter>5)
+                if(counter<=8)
+                var newElement = '<div class="mb-3" id="title_div"><label for="info" class="form-label">Additional Info Entry</label><input type="text" class="form-control" id="addl_info" name="info"></div>'
+                $('.addl_form').append( $(newElement) )
+                if(counter>8)
                 $('#add_new').remove()
             })            
         })
@@ -57,9 +57,14 @@
     <br>
     <h2>Additional Info</h2>
     <p>These entries can range from: honors/awards; certifications; volunteerism; fluent languages</p>
+    {% for message in messages %}
+    <ul>
+        <li>{{ message }}</li>
+    </ul>
+    {% endfor %}
     <br>
     <div id="addl_form">
-        <form action="/additional" method="POST" id="additional" >
+        <form action="/additional" method="POST" id="additional" enctype="multipart/form-data">
             {% csrf_token %}
         <div class="addl_form">
             <div class="mb-3" id="title_div">
@@ -67,22 +72,20 @@
                 <input type="text" class="form-control" id="addl_info" name="info">
             </div>
         </div>
+        <input type="button" id="add_new" value="Add Additional">
+        <br>
+        <br>
+        <h2>Upload a Profile Picture <span>(must be .jpg, .jpeg, .png, .bmp, or .gif)</span></h2>
+        <div class="img_form">
+            <div class="mb-3">
+                <label for="formFile" class="form-label">Upload pic here</label>
+                <input class="form-control" type="file" id="formFile" name="img" >
+            </div>
+        </div>
+        <div class="d-grid gap-2 col-2 mx-auto" id="final_btm_btn">
+            <button class="btn btn-primary" id="submit" type="submit">Final Step - Choose Template</button>
+        </div>
         </form>
     </div>
-    <input type="button" id="add_new" value="Add Additional">
-    <br>
-    <br>
-    <h2>Upload a Profile Picture</h2>
-    <form action="/picture" method="POST" id="picture" enctype="multipart/form-data">
-        {% csrf_token %}
-    <div class="img_form">
-        <div class="mb-3">
-            <label for="formFile" class="form-label">Upload pic here</label>
-            <input class="form-control" type="file" id="formFile" name="img" >
-        </div>
-    </div>
-    </form>
-    <div class="d-grid gap-2 col-2 mx-auto" id="final_btm_btn">
-        <button class="btn btn-primary" id="submit" type="submit">Final Step - Choose Template</button>
-    </div>
+    
             
