--- a/resume_proj/resume_app/templates/objandskill.html
+++ b/resume_proj/resume_app/templates/objandskill.html
@@ -62,43 +62,43 @@
         <div class="row">
             <div class="col">
                 <label for="selected" class="form-label">Skill</label>
-                <input type="text" class="form-control" id="skills" name="selected">
+                <input type="text" class="form-control" id="skills" name="selected1">
             </div>
             <div class="col">
                 <label for="selected" class="form-label">Skill</label>
-                <input type="text" class="form-control" id="skills" name="selected">
+                <input type="text" class="form-control" id="skills" name="selected2">
             </div>
             <div class="col">
                 <label for="selected" class="form-label">Skill</label>
-                <input type="text" class="form-control" id="skills" name="selected">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <label for="selected" class="form-label">Skill</label>
-                <input type="text" class="form-control" id="skills" name="selected">
-            </div>
-            <div class="col">
-                <label for="selected" class="form-label">Skill</label>
-                <input type="text" class="form-control" id="skills" name="selected">
-            </div>
-            <div class="col">
-                <label for="selected" class="form-label">Skill</label>
-                <input type="text" class="form-control" id="skills" name="selected">
+                <input type="text" class="form-control" id="skills" name="selected3">
             </div>
         </div>
         <div class="row">
             <div class="col">
                 <label for="selected" class="form-label">Skill</label>
-                <input type="text" class="form-control" id="skills" name="selected">
+                <input type="text" class="form-control" id="skills" name="selected4">
             </div>
             <div class="col">
                 <label for="selected" class="form-label">Skill</label>
-                <input type="text" class="form-control" id="skills" name="selected">
+                <input type="text" class="form-control" id="skills" name="selected5">
             </div>
             <div class="col">
                 <label for="selected" class="form-label">Skill</label>
-                <input type="text" class="form-control" id="skills" name="selected">
+                <input type="text" class="form-control" id="skills" name="selected6">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <label for="selected" class="form-label">Skill</label>
+                <input type="text" class="form-control" id="skills" name="selected7">
+            </div>
+            <div class="col">
+                <label for="selected" class="form-label">Skill</label>
+                <input type="text" class="form-control" id="skills" name="selected8">
+            </div>
+            <div class="col">
+                <label for="selected" class="form-label">Skill</label>
+                <input type="text" class="form-control" id="skills" name="selected9">
             </div>
         </div>
         <br>
